# oh-sheet

./: .gitignore  LICENSE  README.md  TASKS.md  TODO.md  config.yaml  environment.yaml  pyproject.toml
_for_podcasters/: config.yaml
backend/: database.py  main.py  migrate.py  requirements.txt  schemas.py  update_possible.py
backend/ai/: match_inventory_only.py  migrate_inventory.py  phase1_investigation.py  phase2_investigation.py
backend/echomtg_sync/: __init__.py  api_client.py  csv_processor.py  models.py
backend/tests/: conftest.py  test_api.py
backend/tests/test_echomtg_sync/: __init__.py  conftest.py  test_api_client.py  test_csv_processor.py
data/: clean.csv  echomtg-export-2ManyCards-01-31-2026.csv  echomtg-export-with-notes.csv  inventory.json  inventory_mtg (7).json  leftover_notes.csv  outstanding_notes.csv  raw.csv
docs/: index.html  inventory.js
docs/python/: main.py  pyscript.json
docs/styles/: styles.css
extension/: manifest.json  service-worker.js  test-advanced-search.js  test-search.js
extension/content/: content.css  content.js
extension/lib/: browser-api.js  card-db.js  card-name-utils.js  echo-api.js  rate-limiter.js  search-utils.js
extension/popup/: popup.css  popup.html  popup.js
extension/wireframes/: overlay.html  popup-wireframe.html
src/custom_autocomplete/: __init__.py  format_data.py  table_setup.py  trie.py  update_possible.py
