[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "custom_autocomplete"
version = "2024.02.22"
description = "Simple data formatter."
authors = [
    "Steven Loscalzo",
]
packages = [{include = "custom_autocomplete", from = "src"}]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.1"
ijson = "3.2.3"
